--- a/requirements.txt
+++ b/requirements.txt
@@ -12,14 +12,19 @@ unstructured
 # Embeddings & Vector Store
 sentence-transformers==3.0.0
 faiss-cpu==1.8.0
+scikit-learn
 
 # LLM Interface
 huggingface-hub==0.23.1
 transformers==4.41.2
 torch==2.3.0
+bitsandbytes  # Use latest available version
+accelerate==0.30.1 
 
 # Utilities
 python-dotenv==1.0.1
 tiktoken==0.7.0
 numpy==1.26.4
 black
+nltk
+psutil
