--- a/.gitignore
+++ b/.gitignore
@@ -193,3 +193,6 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+
+# Ignore vector store files
+code/notebooks/vector_stores/
